--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         />
         <div class="profile-header mt-4">
           <h1 class="display-5 fw-bold text-dark">กัลยรัตน์ โพธิสาร</h1>
-          <p class="lead">สาขา: วิศวกรรมคอมพิวเตอร์และปัญญาประดิษฐ์</p>
+          <p class="lead"><em>สาขา: วิศวกรรมคอมพิวเตอร์และปัญญาประดิษฐ์</em></p>
           <p class="text-muted">คณะวิศวกรรมศาสตร์และเทคโนโลยี</p>
           <p class="lead">
             สถาบัน:
@@ -294,4 +294,5 @@
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
+
 
